230413 1. 깃허브 연동하기 2. user외에 dept, hobby, UH mvc 만들기 및 간단하게 쿼리 작성 3. user데이터 insert 및 select list 페이지 만들기

--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -55,7 +55,7 @@
 			 <th>부서번호</th>
 			 <th>전화번호</th>
 			 <th>주소</th>
-			 <th>승인여부</th>
+			 <th>승인여부</th> 
 			</tr>
 		</thead>
 		<tbody>
@@ -70,7 +70,7 @@
 			</tr>
 		</tbody>
 	</table>
-		
+		<p th:each="total : ${getTotalCnt}" >데이터 개수 : <span th:text="${total}"></span></p>
 	</form>	
 </body>
 </html>
