--- a/src/main/resources/templates/uhlist.html
+++ b/src/main/resources/templates/uhlist.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
 </head>
 <body>
 <form name="myform" id="myform">
@@ -64,7 +65,7 @@
 				<td><span th:text="${userlist.id}"></span></td>
 				<td><span th:text="${userlist.user_nm}"></span></td>
 				<td><span th:text="${userlist.user_eml_addr}"></span></td>
-				<td><span th:text="${userlist.dept_no}"></span></td>
+				<td><span th:text="${userlist.dept_nm}"></span></td>
 				<td><span th:text="${userlist.user_telno}"></span></td>
 				<td><span th:text="${userlist.user_addr}"></span></td>
 				<td><span th:text="${userlist.aprv_yn}"></span></td>
@@ -73,7 +74,8 @@
 		<tbody>
 			<tr th:each="uhlist : ${getUHList}">
 				<td><span th:text="${uhlist.id}"></span></td>
-				<td><span th:text="${uhlist.hobby_cd}"></span></td>
+				<!--<td><span th:text="${uhlist.hobby_cd}"></span></td>-->
+				<td><span th:text="${uhlist.hobby_nm}"></span></td>
 			</tr>
 		</tbody>
 	</table>
