--- a/src/main/resources/templates/uhlist.html
+++ b/src/main/resources/templates/uhlist.html
@@ -13,9 +13,7 @@
 		<!-- 메뉴 -->
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#"> <img
-					src="/myhome2/images/img_avatar1.png" alt="Avatar Logo"
-					style="width: 40px;" class="rounded-pill">
+				<a class="navbar-brand" href="#"> 
 				</a>
 
 				<button class="navbar-toggler" type="button"
