--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,7 @@
 	</head>
 	<body>
 		<h1>This is Spring boot</h1>
-		<h1><a href="/user/user_list">회원리스트</a></h1>
+		<h1><a href="/admin">회원리스트</a></h1>
 		<h1><a href="/user/user_write">회원등록</a></h1>
-		<h1><a href="/user/uhlist">회원취미</a></h1>
 	</body>
 </html>
