--- a/src/main/resources/templates/user_write.html
+++ b/src/main/resources/templates/user_write.html
@@ -1,4 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
+	
     <head>
         <meta charset="UTF-8">
 		<title>Insert title here</title>
@@ -6,12 +7,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <style type="text/css">
+	   input[type="checkbox"]:checked {
+		   background-color: black;
+    accent-color:black;
+    border-color: black;
+}
+	  </style>
+
 </head>
 <body>
-<form name="myform" id="myform">
-
-	
-		<!-- 메뉴 -->
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#"> 
@@ -23,23 +28,17 @@
 				</button>
 				<div class="collapse navbar-collapse" id="collapsibleNavbar">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#" role="button"
-							data-bs-toggle="dropdown">Dropdown</a>
-							<ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Link</a></li>
-								<li><a class="dropdown-item" href="#">Another link</a></li>
-								<li><a class="dropdown-item" href="#">A third link</a></li>
-							</ul></li>
+						<li class="nav-item"><a class="nav-link" href="/">홈화면</a></li>
+						<li class="nav-item"><a class="nav-link" href="/user/user_write">회원등록</a></li>
+						<li class="nav-item"><a class="nav-link" href="/admin">관리자페이지</a></li>
+						
 					</ul>
 				</div>
 			</div>
 		</nav>
 
 
+<form name="myformcheck" id="myformcheck" method="post"  th:action="@{/user/user_idcheck}">
 <div class="container mt-3">
   <h3>회원 등록하기</h3>
   
@@ -54,19 +53,29 @@
         <th>아이디</th>
         <td>
         	 <div class="input-group">
-			    <input type="text" class="form-control" 
-			    placeholder="아이디를 입력하세요" 
-			    name="id" id="id">
+			    <input type="text" class="form-control" placeholder="아이디를 입력하세요" id="user_id_checked" name="user_id_checked" required>
 			 </div>
-        </td>
+			 </td>
+      <td><button type="button" id="idcheck" class="btn btn-dark">아이디 체크</button></td>
       </tr>
-      <tr>
+    </tbody>
+    </table>
+</form>
+<form name="myform" id="myform" method="post" th:action="@{/user/user_save}">
+<input type="hidden" class="form-control" id="user_id" name="user_id">		 
+  <table class="table">
+   	<colgroup>
+   		<col width="30%">
+   		<col width="*">
+   	</colgroup>
+    <tbody>
+		<tr>
         <th>이름</th>
         <td>
         	 <div class="input-group">
 			    <input type="text" class="form-control" 
 			    placeholder="이름을 입력하세요"
-			    name="user_nm" id="user_nm">
+			    name="user_nm" id="user_nm" required>
 			 </div>
         </td>
       </tr>
@@ -76,7 +85,7 @@
         	 <div class="input-group">
 			    <input type="email" class="form-control" 
 			    placeholder="이메일을 입력하세요" 
-			    name="user_eml_addr" id="user_eml_addr">
+			    name="user_eml_addr" id="user_eml_addr" required>
 			 </div>
         </td>
       </tr>
@@ -85,7 +94,7 @@
         <td>
         	 <select name="dept_no">
     <option th:each="dept_nm_list : ${getDeptList}" 
-        th:value="${dept_nm_list.dept_no}" th:text="${dept_nm_list.dept_nm}"></option>
+        th:value="${dept_nm_list.dept_no}" th:text="${dept_nm_list.dept_nm}" ></option>
 </select>
         </td>
       </tr>
@@ -95,7 +104,7 @@
         	 <div class="input-group">
 			    <input type="tel" class="form-control" 
 			    placeholder="전화번호를 입력하세요" 
-			    name="user_telno" id="user_telno">
+			    name="user_telno" id="user_telno" required>
 			 </div>
         </td>
       </tr>
@@ -112,11 +121,11 @@
       <tr>
         <th>취미</th>
                 <td>
-  <div th:each="hobby : ${getHobbyList}" class="form-check form-check-inline">
+  <div th:each="hobby : ${getHobbyList}" class="form-check form-check-inline" >
             <input type="checkbox" name='hobby_cd' th:value="${hobby.hobby_cd}"
-                   class="form-check-input">
+                   class="form-check-input" accent-color: black;>
             <label 
-                   th:text="${hobby.hobby_nm}" class="form-check-label"></label>
+                   th:text="${hobby.hobby_nm}" class="form-check-label" ></label>
         </td>
       </tr>
             
@@ -128,20 +137,34 @@
 
  <div class="container" style="text-align:right">
 	<!--<button type="button" class="btn btn-primary" onclick= "goSave()">등록</button>-->
-	<button type="button" class="btn btn-primary"onclick= "goSave()" >승인요청</button>
+	<button type="submit" class="btn btn-dark">승인요청</button>
  </div>
 
   </form>
 </body>
-<script>
-function goSave()
-{
-	var frm = document.myform;
-	frm.action = "./user_save";
-	frm.submit();
-	alert("승인요청 완료");
-}
-
+<script type="text/javascript">
+$(()=>{
+	$("#idcheck").click(()=>{
+		let data = {user_id:$("#user_id_checked").val()}
+		$.ajax(({
+			url:"/user/idcheck",
+			data:data,
+			type:"POST"
+		}))
+		.done((res)=>{
+			if(res.result==0){
+				let user_id_fin = $("#user_id_checked").val();
+				alert("사용 가능한 아이디입니다.");
+				$("#user_id_checked").prop("readOnly", true);
+				$("#user_id").attr('value', user_id_fin);
+			} else{
+				alert("이미 사용 중인 아이디입니다.");
+			}
+		})
+		.fail((res, error, status)=>{
+			console.log(error)
+		})
+	})
+})
 </script>
-
 </html>
